# c-testing

./: CMakeLists.txt  Doxyfile  README.md  config.cmake  main.c
.obsidian/: app.json  workspace.json
config/: config.h
html/: ExampleModule_8h_source.html  ExampleSubmodule_8h_source.html  InternalToExampleModule_8h_source.html  Main_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_063001cace14f40d8004cdd83273ea3b.html  dir_063001cace14f40d8004cdd83273ea3b.js  dir_0f0b073c7833a48bf82ae509b27cda29.html  dir_0f0b073c7833a48bf82ae509b27cda29.js  dir_1552ea282d56b7880a152cb51712d2c9.html  dir_1552ea282d56b7880a152cb51712d2c9.js  dir_241ab92286c9c5cc81e132d03708325b.html  dir_241ab92286c9c5cc81e132d03708325b.js  dir_2b5bc4ce078401a685b574f5997cb880.html  dir_35e1ef53797c96b40d9a94c008c4f8f0.html  dir_35e1ef53797c96b40d9a94c008c4f8f0.js  dir_5ef2060fea12b1efd35ac1ed3ae1fbb1.html  dir_5ef2060fea12b1efd35ac1ed3ae1fbb1.js  dir_60e81473d89aa7ce5ca33846f8492842.html  dir_60e81473d89aa7ce5ca33846f8492842.js  dir_6175ad2d4bf53b14afd4b1a5818a3abf.html  dir_6564eb26f2c4a6916e6b0a34a86ef03f.html  dir_77bd92f62b36cefb9ac270f698d92b20.html  dir_8098428ad7b5cb2abdd8c0b1471c50b7.html  dir_8098428ad7b5cb2abdd8c0b1471c50b7.js  dir_8aa94309a1caa864df9c0ee4a8535a4e.html  dir_8aa94309a1caa864df9c0ee4a8535a4e.js  dir_8f822e11297a3be058b55cb14642113b.html  dir_8f822e11297a3be058b55cb14642113b.js  dir_b24f9537f94b12f547cf00593612510d.html  dir_b24f9537f94b12f547cf00593612510d.js  dir_c2d405700fb95ae3d6ed5485d4f777fc.html  dir_c2d405700fb95ae3d6ed5485d4f777fc.js  dir_d6d25fd065df401d37b1998219ee7f50.html  dir_d6d25fd065df401d37b1998219ee7f50.js  dir_e5bf6403e61f24b709f319f2445454f5.html  dir_eaadfdb7f4e4e08b2cfd70248c19e35c.html  doxygen_crawl.html  (+12 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
src/: main.c
src/example/docs/: Example Module.md
src/example/src/: InternalToExampleModule.c
src/example_module/: CMakeLists.txt
src/example_module/docs/: example_module.md  md_examples.md
src/example_module/private/: InternalToExampleModule.h
src/example_module/public/: ExampleModule.h
src/example_module/src/: ExampleModule.c  InternalToExampleModule.c
srcMC464/: CMakeLists.txt  CreateModule.cmake  IncludeModules.cmake
srcMC464/config/: config.h.in
srcMC464/example_module/: CMakeLists.txt
srcMC464/example_module/docs/: example_module.md  md_examples.md
srcMC464/example_module/example_submodule/: CMakeLists.txt
srcMC464/example_module/example_submodule/public/example_module/example_submodule/: ExampleSubmodule.h
srcMC464/example_module/example_submodule/src/: ExampleModule.c
srcMC464/example_module/src/: ExampleModule.c  InternalToExampleModule.c
srcMC464/modules/: CreateModule.cmake
srcMC464/modules/example_module/: CMakeLists.txt
srcMC464/modules/example_module/docs/: md_examples.md
srcMC464/modules/example_module/example_submodule/: CMakeLists.txt
srcMC464/modules/example_module/private/: InternalToExampleModule.h
srcMC464/modules/example_module/public/: ExampleModule.h
srcMC464/modules/example_module/src/: ExampleModule.c  InternalToExampleModule.c
srcMC464/modules/trio_main/: CMakeLists.txt
srcMC464/modules/trio_main/docs/: trio_main.md
srcMC464/modules/trio_main/src/: Main.c
srcMC464/trio_main/: CMakeLists.txt
srcMC464/trio_main/public/trio_main/: Main.h
srcMC464/trio_main/src/: Main.c
